--- a/index.html
+++ b/index.html
@@ -6,9 +6,37 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Document</title>
         <link rel="stylesheet" href="./style.css" type="text/css" media="all" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
-        hello world
-        <h3>hiiiiii</h3>
+        <nav>
+            <div class="logo">
+                <img src="./assets/logo-navbar.png" alt="" />
+            </div>
+            <div class="items-link">
+                <a href="#">Features</a>
+                <a href="#">How It Works</a>
+                <a href="#">Why It's different</a>
+            </div>
+            <div class="early-button">
+                <button type="reset">Get Early Access</button>
+            </div>
+        </nav>
+        <main>
+            <section class="hero">
+                <span class="early"><img src="./assets/CheckCircle.png" alt="" />Early Access Now Open</span>
+                <p class="heading-1">Structured Thinking,</p>
+                <p class="heading-2">Not Just Note-Taking.</p>
+                <p class="about">A private space to store notes, links, and learning summaries — designed to <br /> help you think clearly and connect ideas.
+
+</p>
+<div class="buttons">
+  <button class="btn1">Start Building Your Vault</button>
+  <button class="btn2">See How It Works</button>
+</div>
+            </section>
+        </main>
     </body>
 </html>
