--- a/index.html
+++ b/index.html
@@ -4,39 +4,161 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Document</title>
-        <link rel="stylesheet" href="./style.css" type="text/css" media="all" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <title>Assignment-1</title>
+        <link rel="stylesheet" href="style.css" type="text/css" media="all" />
     </head>
     <body>
         <nav>
             <div class="logo">
                 <img src="./assets/logo-navbar.png" alt="" />
             </div>
-            <div class="items-link">
-                <a href="#">Features</a>
-                <a href="#">How It Works</a>
-                <a href="#">Why It's different</a>
+            <div class="features-list">
+                <ul>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">How It Works</a></li>
+                    <li><a href="#">Why It's Different</a></li>
+                </ul>
             </div>
             <div class="early-button">
-                <button type="reset">Get Early Access</button>
+                <button type="submit">Get Early Access</button>
             </div>
         </nav>
         <main>
             <section class="hero">
-                <span class="early"><img src="./assets/CheckCircle.png" alt="" />Early Access Now Open</span>
-                <p class="heading-1">Structured Thinking,</p>
-                <p class="heading-2">Not Just Note-Taking.</p>
-                <p class="about">A private space to store notes, links, and learning summaries — designed to <br /> help you think clearly and connect ideas.
-
-</p>
-<div class="buttons">
-  <button class="btn1">Start Building Your Vault</button>
-  <button class="btn2">See How It Works</button>
-</div>
+                <div class="hero-container">
+                    <button class="early-access">
+                        <img
+                            src="https://img.icons8.com/?size=100&id=94574&format=png&color=000000"
+                            alt=""
+                        />Early Access Now Open
+                    </button>
+                    <h1 class="heading1">Structured Thinking,</h1>
+                    <h1 class="heading2">Not Just, Note Taking</h1>
+                    <p>
+                        A private space to store notes, links, and learning
+                        summaries — designed to <br />help you think clearly and
+                        connect ideas.
+                    </p>
+                    <button type="submit" class="btn1">
+                        Start Building Your Vault
+                        <img src="/assets/ArrowRight.png" alt="" />
+                    </button>
+                    <button type="submit" class="btn2">
+                        <img
+                            src="https://img.icons8.com/?size=100&id=398&format=png&color=000000"
+                            alt=""
+                        />
+                        See How It Works
+                    </button>
+                </div>
             </section>
+            <section class="card">
+                <section class="card-container">
+                    <h1>Notes Don't Fail, Structure Does.</h1>
+                    <p>
+                        You are not bad at learning.Your tools just weren't
+                        built for how knowledge actually works.
+                    </p>
+                    <div class="card-section">
+                        <div class="cards">
+                            <img src="./assets/Vector.png" alt="" />
+                            <h2>Scattered Notes.</h2>
+                            <p>
+                                Your ideas live in different apps , none of them
+                                connected.
+                            </p>
+                        </div>
+                        <div class="cards">
+                            <img src="./assets/Bookmarks.png" alt="" />
+                            <h2>Bookmark Overload.</h2>
+                            <p>
+                                Hundred of saved links you will never revisit or
+                                remember.
+                            </p>
+                        </div>
+                        <div class="cards">
+                            <img src="./assets/Brain.png" alt="" />
+                            <h2>No Idea Connections</h2>
+                            <p>
+                                Insights stay isolated, never building into
+                                bigger understanding.
+                            </p>
+                        </div>
+                        <div class="cards">
+                            <img src="./assets/Info.png" alt="" />
+                            <h2>Forget What You Learn</h2>
+                            <p>
+                                knowledge fades because there no system to
+                                retain it.
+                            </p>
+                        </div>
+                    </div>
+                </section>
+            </section>
+            <section class="brain">
+                <div class="sec1">
+                    <img src="./assets/knowledge.png" alt="" />
+                </div>
+                <div class="sec2">
+                    <p style="color:green;">THE SOLUTION</p>
+                    <h1>Your Second Brain, Structured By Design</h1>
+                    <p>
+                        Personal Knowledge Vault isn’t another note-taking app.
+                        It’s a thinking environment where every note, link, and
+                        summary becomes part of an interconnected web of
+                        understanding.
+                    </p>
+                    <ul>
+                        <li>
+                            <img src="./assets/CheckCircle.png" alt="" />
+                            Capture ideas with built-in structure from day one
+                        </li>
+                        <li>
+                            <img src="./assets/CheckCircle.png" alt="" />
+                            Connect related concept automatically as you write
+                        </li>
+                        <li>
+                            <img src="./assets/CheckCircle.png" alt="" />
+                            Build lasting knowledge through reflection prompt
+                        </li>
+                        <li>
+                            <img src="./assets/CheckCircle.png" alt="" /> Find
+                            anything instantly with symantric search
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="last-section">
+              <h1>Ready To Think More Clearly?</h1>
+              <p>Join thousands of learners who are building their personal knowledge vaults.
+Start free, no credit card required.</p>
+                                      <button type="submit" class="btn1">
+                        Get Early Access 
+                        <img src="/assets/ArrowRight.png" alt="" />
+                    </button>
+            </div>
+              <p>Free during early access • No credit card needed</p>
+            </section>
+            
         </main>
+        <footer>
+          <section class="footer">
+            <div class="footer-logo">
+              <img src="./assets/logo-footer.png" alt="" />
+            </div>
+            <div class="social">
+              <p class="socialLink">Social links</p>
+              <ul>
+                <li><img src="https://img.icons8.com/?size=100&id=A4DsujzAX4rw&format=png&color=000000" alt="" /></li>
+                <li><img src="https://img.icons8.com/?size=100&id=84888&format=png&color=000000" alt="" /></li>
+                <li><img src="https://img.icons8.com/?size=100&id=118487&format=png&color=000000" alt="" /></li>
+              </ul>
+            </div>
+          </section>
+          <div class="copyright">
+             <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
+          </div>
+         
+        </footer>
     </body>
 </html>
